--- a/styles/base.css
+++ b/styles/base.css
@@ -9,15 +9,23 @@ font-family: "IBM Plex Sans", sans-serif, "IBM Plex Serif", serif;
 font-weight: 400;
 }
 
+header {
+  background-color: orange;
+}
+
 h1 {
 font-family:  "IBM Plex Serif", serif;
 font-weight: 700;
-padding: 1rem;
+padding: 1rem 0 0;
 }
 
 #course-title {
   display: block;
   text-align: center;
+  padding: 1rem;
+  font-size: x-large;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 400;
 }
 
 nav {
@@ -44,6 +52,11 @@ main {
   grid-template: 1fr / 2fr 1fr;
 }
 
+main h1 {
+  grid-column: 1/3;
+  text-align: center;
+}
+
 footer {
   text-align: center;
   margin-top: 1rem;
@@ -60,8 +73,8 @@ footer {
 
 .card h2 {
   text-align: center;
-  border-bottom: 1px solid #000;
   margin: 0 0 1rem;
+  background-color: orange;
 }
 
 .card img {
@@ -71,4 +84,12 @@ footer {
 
 .me {
  grid-column: 1/2;
+}
+
+.resources {
+  grid-column: 2/3;
+}
+
+.resources ul {
+  padding: 1rem;
 }
