--- a/styles/base.css
+++ b/styles/base.css
@@ -77,15 +77,28 @@ footer {
   background-color: orange;
 }
 
-.card img {
+.logan img {
   float: right;
-  margin: 0 0 .5rem 1.5rem;
+  margin: 0 0 1rem 1.5rem;
 }
 
 .me {
  grid-column: 1/2;
 }
 
+.utah {
+  margin-top: 3rem;
+  border-top: 1px solid #000;
+}
+
+.utah img {
+  float: left;
+  margin: 1.5rem 1rem 1.5rem 0;
+}
+
+.utah p {
+  margin: 1.5rem 0 0 0;
+}
 .resources {
   grid-column: 2/3;
 }
